# quadrobot_vision

./: CMakeLists.txt  README.md  package.xml
launch/: label_image.launch  object_detection.launch  plane_detection.launch  pub_cvImage.launch  r200_logging.launch  sr300_logging.launch  train_image.launch
model/: output_labels.txt
rviz/: config.rviz
script/: label_image.py  train_image.py
src/object_detection/: obj_detection.cpp
src/plane_detection/: plane_detection.cpp
