<?xml version="1.0"?>
<package>
  <name>quadrobot_vision</name>
  <version>1.0.0</version>
  <description>The quadrobot_vision package</description>
  <maintainer email="jjm@hanmail.net">jjm</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>quadrobot_msgs</build_depend>
  
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>quadrobot_msgs</run_depend>

  <export>

  </export>
</package>
